bluetooth: show bluetooth enable message

Hiding the tableview, while leaving its parent ScrollView visible, causes
problems on Mac where ScrollViews use layers internally.

Bug: 846900
Change-Id: I94ca6d1f000f806d4218e4830fb68b790e45f798
Reviewed-on: https://chromium-review.googlesource.com/1080767
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Reilly Grant <reillyg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563306}
Former-commit-id: 702071874d259e9a53acadf63bba6035ea091cd1